<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:background="@drawable/black_border_white_background_rectangle"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <RadioButton
        android:layout_width="match_parent"
        android:buttonTint="@color/material_blue_grey_800"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_title"/>
    <RadioButton
        android:layout_width="match_parent"
        android:buttonTint="@color/material_blue_grey_800"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_author"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/material_blue_grey_800"
        android:text="@string/sort_by_date"/>
</RadioGroup>