<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sync_bookshare_progress_dialog"
        android:id="@+id/progress_dialog_title"
        android:layout_gravity="center_horizontal"
        />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/sync_progress_bar"
        android:layout_gravity="center_horizontal"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/green_check_mark"
        android:src="@drawable/green_check_mark"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_sync_bookshare_progress_dialog"
        android:id="@+id/progress_dialog_sync_message"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_done_sync_bookshare"
        android:id="@+id/done_button"
        android:layout_gravity="right"
        />

</LinearLayout>