<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="@string/book_details_removefromreadinglist_title"
            android:visibility="gone"/>
        <View
            android:id="@+id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_below="@id/title"
            />
        <TextView
            android:id="@+id/dialog_message"
            android:layout_below="@id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/book_details_removefromreadinglist_message"
            android:gravity="center"
            />
        <LinearLayout
            android:id="@+id/button_area"
            android:layout_below="@id/dialog_message"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/remove_from_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_details_removefromreadinglist_button_list"
                />
            <Button
                android:id="@+id/remove_from_both_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_details_removefromreadinglist_button_both"
                />
            <Button
                android:id="@+id/negative_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_label_cancel"
                />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@id/button_area"
            android:background="@android:color/white"
            android:padding="80dp"
            android:visibility="gone"
            >
        </ProgressBar>
        <View
            android:id="@+id/separator_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_below="@id/listview"
            />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
