<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="@string/book_details_readinglist_button"
            android:visibility="gone"/>
        <View
            android:id="@+id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_below="@id/title"
            />
        <LinearLayout
            android:id="@+id/button_area"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/positive_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button_label_cancel"
                />
            <Button
                android:id="@+id/negative_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button_label_accept"
                />
        </LinearLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/separator_1"
            android:layout_above="@id/button_area"
            >
        </ListView>
        <View
            android:id="@+id/separator_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_below="@id/listview"
            />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
