<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <org.geometerplus.zlibrary.ui.android.view.ZLAndroidWidget
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fadeScrollbars="false"
            android:focusable="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_weight="1"
            android:contentDescription="Reading Pane"
            android:scrollbars="vertical" />

        <LinearLayout
            android:id="@+id/navigation_bar_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/navigation_bar_color"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/navigation_bar_skip_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/previous"
                android:src="@drawable/ic_skip_previous_white_24dp" />

            <ImageButton
                android:id="@+id/navigation_bar_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_play_arrow_white_24dp" />

            <ImageButton
                android:id="@+id/navigation_bar_skip_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_skip_next_white_24dp" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/drawer_menu"
        />

</android.support.v4.widget.DrawerLayout>